patch: fix start page spacing

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_startPage.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_startPage.scss
@@ -1,6 +1,6 @@
 .start-page {
-    &_upper {
-        margin-block-start: 2em;
+    &_summary {
+        margin-block-end: 1.25em;
     }
 
     &_btn {
